<resources>
	
    <!-- Application -->
    <string name="app_name">LunchList</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_lunch_list">Lunch List</string>
    
    <!-- Restaurant types -->
    <string name="sit_down">Sit-Down</string>
    <string name="take_out">Take-Out</string>
    <string name="delivery">Delivery</string>
    
    <!-- Form Labels -->
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="type">Type:</string>
    <string name="notes">Notes</string>
    <string name="feed">Feed</string>
    <string name="save">Save</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    
    <!-- Descriptions -->
    <string name="icon_desc">The icon used for the restaurant type</string>
	<string name="add_restaurant_instructions">Click the MENU button to add a restaurant!</string>
    
	<!-- Menu -->
	<string name="add">Add</string>
	
	<!-- Preferences -->
	<string name="pref_default">name</string>
	<string name="pref_key">sort order</string>
	<string name="pref_title">Sort Order</string>
	<string name="pref_summary">Choose the order the list uses</string>
	<string name="pref_dialog_title">Choose a sort order</string>
	
	<!-- Notification -->
	<string name="loc_saved">Location saved</string>
	<string name="lunch_time">It\'s time for lunch!</string>
	<string name="empty">No restaurants!</string>
	
</resources>