<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:text="@string/name"
                android:textColor="#006600"
                android:textStyle="bold"/>
	
	        <EditText
	            android:id="@+id/name"
	            android:textStyle="italic"
	            android:inputType="text"/>
	    </TableRow>
	
	    <TableRow>
	
	        <TextView
	            android:text="@string/address"
	            android:textColor="#006600"
	            android:textStyle="bold"/>
	
	        <EditText
	            android:id="@+id/addr"
	            android:textStyle="italic"
	            android:inputType="text"/>
	
	    </TableRow>
	    
	    <TableRow>

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/type"
	            android:textColor="#006600"
	            android:textStyle="bold"/>

	        <RadioGroup
	            android:id="@+id/types"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content">

	            <RadioButton
	                android:id="@+id/sit_down"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:checked="true"
	                android:text="@string/sit_down"/>

	            <RadioButton
	                android:id="@+id/take_out"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/take_out"/>

	            <RadioButton
	                android:id="@+id/delivery"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/delivery"/>
	            
	        </RadioGroup>

	    </TableRow>
	
	    <TableRow>
	        
	        <TextView
	            android:text="@string/notes"
	            android:textColor="#006600"
	            android:textStyle="bold"/>
	        
	        <EditText
	            android:id="@+id/notes"
	            android:inputType="textMultiLine"
	            android:gravity="top"
	            android:lines="2"
	            android:scrollHorizontally="false"
	            android:maxLines="2"/>
	        
	    </TableRow>
	    
	    <Button
	        android:id="@+id/save"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/save"/>
	
	</TableLayout>

</ScrollView>